# gitseed

./: README.md  notes.txt  planning.txt  thoughts.txt
listener/: Cargo.toml  README.md  build.rs  notes.txt  thoughts.txt
listener/src/: args.rs  body.rs  libpq.rs  main.rs  pq.rs  server.rs
migrations/: README.md  liquibase.properties  main.sql  thoughts.txt
registry/: thoughts.txt
second_phase/ansible/: bastion.yml
second_phase/ansible/roles/packer/tasks/: main.yml
second_phase/ansible/roles/packer/vars/: main.yml
second_phase/ansible/roles/terraform/tasks/: main.yml
second_phase/ansible/roles/terraform/vars/: main.yml
