[package]
name = "listener"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
seedpq = { path = "../../seedpq" }
tokio-quiche = "0.7.1"
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3"
log = { version = "0.4.20" }
futures-util = { version = "0.3", default-features = false }
quiche = "0.24.6"
http = "1"
http-body = "1"
http-body-util = "0.1"
tokio-util = { version = "0.7.13" }
env_logger = "0.10"
